// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ZodTypeExtractor - Generated TypeScript Declarations > basic-schema.ts > should generate TypeScript declarations 1`] = `
"// Generated by zinfer - Do not edit manually

export type UserInput = {
  id: string;
  name: string;
  age?: number | undefined; 
};

export type UserOutput = {
  id: string;
  name: string;
  age?: number | undefined; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > brand-schema.ts > should generate TypeScript declarations with brand information 1`] = `
"// Generated by zinfer - Do not edit manually

import { BRAND } from "zod";

export type UserIdInput = string;

export type UserIdOutput = string & { [BRAND]: { UserId: true } };

export type UserInput = {
  id: string;
  name: string;
  email: string; 
};

export type UserOutput = {
  id: string & {
    [BRAND]: {
      UserId: true 
    } 
  };
  name: string;
  email: string; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > cross-ref-schema.ts > should generate TypeScript declarations with cross-references 1`] = `
"// Generated by zinfer - Do not edit manually

export type AddressInput = {
  street: string;
  city: string;
  country: string; 
};

export type AddressOutput = {
  street: string;
  city: string;
  country: string; 
};

export type UserInput = {
  name: string;
  address: AddressSchemaInput;
  previousAddresses?: readonly AddressSchemaInput[]; 
};

export type UserOutput = {
  name: string;
  address: AddressSchemaOutput;
  previousAddresses?: readonly AddressSchemaOutput[]; 
};

export type CompanyInput = {
  name: string;
  headquarters: AddressSchemaInput;
  employees: readonly UserSchemaInput[]; 
};

export type CompanyOutput = {
  name: string;
  headquarters: AddressSchemaOutput;
  employees: readonly UserSchemaOutput[]; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > declaration options > should generate with inputOnly option 1`] = `
"// Generated by zinfer - Do not edit manually

export type DateInput = {
  createdAt: string;
  count: string; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > declaration options > should generate with outputOnly option 1`] = `
"// Generated by zinfer - Do not edit manually

export type DateOutput = {
  createdAt: Date;
  count: number; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > declaration options > should generate with unifyIfSame option 1`] = `
"// Generated by zinfer - Do not edit manually

export type User = {
  id: string;
  name: string;
  age?: number | undefined; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > enum-schema.ts > should generate TypeScript declarations with enums 1`] = `
"// Generated by zinfer - Do not edit manually

export type DirectionInput = "north" | "south" | "east" | "west";

export type DirectionOutput = "north" | "south" | "east" | "west";

export type ColorInput = Color;

export type ColorOutput = Color;

export type PriorityInput = Priority;

export type PriorityOutput = Priority;
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > getter-schema.ts > should generate TypeScript declarations with getter-based recursive schemas 1`] = `
"// Generated by zinfer - Do not edit manually

export type TreeNodeInput = {
  value: string;
  children?: TreeNodeSchemaInput[]; 
};

export type TreeNodeOutput = {
  value: string;
  children?: TreeNodeSchemaOutput[]; 
};

export type NestedRecordInput = {
  name: string;
  items?: NestedRecordSchemaInput; 
};

export type NestedRecordOutput = {
  name: string;
  items?: NestedRecordSchemaOutput; 
};

type functionInput = Function;

type functionOutput = Function;

export type CallbackInput = {
  name: string;
  callback: functionSchemaInput;
  optionalCallback?: Function | undefined; 
};

export type CallbackOutput = {
  name: string;
  callback: functionSchemaOutput;
  optionalCallback?: Function | undefined; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > intersection-schema.ts > should generate TypeScript declarations with intersections 1`] = `
"// Generated by zinfer - Do not edit manually

type BaseInput = {
  id: string; 
};

type BaseOutput = {
  id: string; 
};

type TimestampInput = {
  createdAt: Date;
  updatedAt: Date; 
};

type TimestampOutput = {
  createdAt: Date;
  updatedAt: Date; 
};

type MetadataInput = {
  version: number; 
};

type MetadataOutput = {
  version: number; 
};

export type EntityInput = {
  id: string;
  createdAt: Date;
  updatedAt: Date; 
};

export type EntityOutput = {
  id: string;
  createdAt: Date;
  updatedAt: Date; 
};

export type MergedInput = {
  id: string;
  createdAt: Date;
  updatedAt: Date; 
};

export type MergedOutput = {
  id: string;
  createdAt: Date;
  updatedAt: Date; 
};

export type AndInput = {
  id: string;
  version: number; 
};

export type AndOutput = {
  id: string;
  version: number; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > lazy-schema.ts > should generate TypeScript declarations with circular references 1`] = `
"// Generated by zinfer - Do not edit manually

type CategoryBaseInput = {
  name: string;
  subcategories: readonly {
    name: string;
    subcategories: readonly any[]; 
  }[]; 
};

type CategoryBaseOutput = {
  name: string;
  subcategories: readonly {
    name: string;
    subcategories: readonly any[]; 
  }[]; 
};

export type CategoryInput = CategoryInterface;

export type CategoryOutput = CategoryInterface;

type TreeNodeBaseInput = {
  value: string;
  children: readonly {
    value: string;
    children: readonly any[];
    parent?: any | undefined; 
  }[];
  parent?: {
    value: string;
    children: readonly any[];
    parent?: any | undefined; 
  } | undefined; 
};

type TreeNodeBaseOutput = {
  value: string;
  children: readonly {
    value: string;
    children: readonly any[];
    parent?: any | undefined; 
  }[];
  parent?: {
    value: string;
    children: readonly any[];
    parent?: any | undefined; 
  } | undefined; 
};

export type TreeNodeInput = TreeNodeInterface;

export type TreeNodeOutput = TreeNodeInterface;

export type JsonValueInput = string | number | boolean | JsonValue[] | { [key: string]: JsonValue; } | null;

export type JsonValueOutput = string | number | boolean | JsonValue[] | { [key: string]: JsonValue; } | null;
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > mixed-export-schema.ts > should generate TypeScript declarations respecting export status 1`] = `
"// Generated by zinfer - Do not edit manually

type InternalMetaInput = {
  version: number;
  createdAt: Date; 
};

type InternalMetaOutput = {
  version: number;
  createdAt: Date; 
};

export type PublicDataInput = {
  id: string;
  name: string;
  meta: InternalMetaSchemaInput; 
};

export type PublicDataOutput = {
  id: string;
  name: string;
  meta: InternalMetaSchemaOutput; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > multi-schema.ts > should generate TypeScript declarations for multiple schemas 1`] = `
"// Generated by zinfer - Do not edit manually

export type UserInput = {
  id: string;
  name: string;
  email: string; 
};

export type UserOutput = {
  id: string;
  name: string;
  email: string; 
};

export type PostInput = {
  id: string;
  title: string;
  content: string;
  authorId: string;
  publishedAt?: Date | undefined; 
};

export type PostOutput = {
  id: string;
  title: string;
  content: string;
  authorId: string;
  publishedAt?: Date | undefined; 
};

export type CommentInput = {
  id: string;
  content: string;
  postId: string;
  authorId: string;
  createdAt: Date; 
};

export type CommentOutput = {
  id: string;
  content: string;
  postId: string;
  authorId: string;
  createdAt: Date; 
};

type InternalHelperInput = {
  internal: boolean; 
};

type InternalHelperOutput = {
  internal: boolean; 
};

export type DateStringInput = {
  date: string; 
};

export type DateStringOutput = {
  date: Date; 
};

export type AliasedInput = any;

export type AliasedOutput = any;
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > nested-schema.ts > should generate TypeScript declarations with nested objects 1`] = `
"// Generated by zinfer - Do not edit manually

type AddressInput = {
  street: string;
  city: string;
  zipCode: string; 
};

type AddressOutput = {
  street: string;
  city: string;
  zipCode: string; 
};

export type PersonInput = {
  name: string;
  address: AddressSchemaInput;
  alternateAddresses: readonly AddressSchemaInput[]; 
};

export type PersonOutput = {
  name: string;
  address: AddressSchemaOutput;
  alternateAddresses: readonly AddressSchemaOutput[]; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > transform-schema.ts > should generate TypeScript declarations with transforms 1`] = `
"// Generated by zinfer - Do not edit manually

export type DateInput = {
  createdAt: string;
  count: string; 
};

export type DateOutput = {
  createdAt: Date;
  count: number; 
};
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > union-ref-schema.ts > should generate TypeScript declarations with union references 1`] = `
"// Generated by zinfer - Do not edit manually

export type DogInput = {
  kind: "dog";
  name: string;
  breed: string; 
};

export type DogOutput = {
  kind: "dog";
  name: string;
  breed: string; 
};

export type CatInput = {
  kind: "cat";
  name: string;
  indoor: boolean; 
};

export type CatOutput = {
  kind: "cat";
  name: string;
  indoor: boolean; 
};

export type BirdInput = {
  kind: "bird";
  name: string;
  canFly: boolean; 
};

export type BirdOutput = {
  kind: "bird";
  name: string;
  canFly: boolean; 
};

export type PetInput = DogSchemaInput | CatSchemaInput | BirdSchemaInput;

export type PetOutput = DogSchemaOutput | CatSchemaOutput | BirdSchemaOutput;

export type AnimalInput = DogSchemaInput | CatSchemaInput;

export type AnimalOutput = DogSchemaOutput | CatSchemaOutput;
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > union-schema.ts > should generate TypeScript declarations with unions 1`] = `
"// Generated by zinfer - Do not edit manually

export type StatusInput = "active" | "inactive" | "pending";

export type StatusOutput = "active" | "inactive" | "pending";

export type ResultInput = {
  type: "success";
  data: string; 
} | {
  type: "error";
  message: string; 
};

export type ResultOutput = {
  type: "success";
  data: string; 
} | {
  type: "error";
  message: string; 
};

export type StringOrNumberInput = string | number;

export type StringOrNumberOutput = string | number;
"
`;

exports[`ZodTypeExtractor - Generated TypeScript Declarations > utility-types-schema.ts > should generate TypeScript declarations with utility types 1`] = `
"// Generated by zinfer - Do not edit manually

type UserInput = {
  id: string;
  name: string;
  email: string;
  age: number; 
};

type UserOutput = {
  id: string;
  name: string;
  email: string;
  age: number; 
};

export type PartialUserInput = {
  id?: string | undefined;
  name?: string | undefined;
  email?: string | undefined;
  age?: number | undefined; 
};

export type PartialUserOutput = {
  id?: string | undefined;
  name?: string | undefined;
  email?: string | undefined;
  age?: number | undefined; 
};

export type UserIdNameInput = {
  id: string;
  name: string; 
};

export type UserIdNameOutput = {
  id: string;
  name: string; 
};

export type UserWithoutEmailInput = {
  id: string;
  name: string;
  age: number; 
};

export type UserWithoutEmailOutput = {
  id: string;
  name: string;
  age: number; 
};

export type RequiredUserInput = {
  id: string;
  name: string;
  email: string;
  age: number; 
};

export type RequiredUserOutput = {
  id: string;
  name: string;
  email: string;
  age: number; 
};

type NestedInput = {
  user: UserSchemaInput;
  settings: {
    theme: string;
    notifications: boolean; 
  }; 
};

type NestedOutput = {
  user: UserSchemaOutput;
  settings: {
    theme: string;
    notifications: boolean; 
  }; 
};

export type DeepPartialNestedInput = {
  user?: {
    id?: string | undefined;
    name?: string | undefined;
    email?: string | undefined;
    age?: number | undefined; 
  } | undefined;
  settings?: {
    theme?: string | undefined;
    notifications?: boolean | undefined; 
  } | undefined; 
};

export type DeepPartialNestedOutput = {
  user?: {
    id?: string | undefined;
    name?: string | undefined;
    email?: string | undefined;
    age?: number | undefined; 
  } | undefined;
  settings?: {
    theme?: string | undefined;
    notifications?: boolean | undefined; 
  } | undefined; 
};
"
`;
